# nix-update-fetch

./: .gitignore  Cargo.toml  README.md  TODO  debug.nix  default.nix  release.nix  shell.nix
src/: main.rs
